fix-uneven-arrow (#166)

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -61,6 +61,7 @@ a, a:hover {
 
 .faq-svg {
     width: 25px;
+    min-width: 25px;
     height: 50px;
     margin: 0 15px;
     transform: rotate(0deg);
